force-app/main/default/objects/innohub__Activity__c/fields/Comment_Blueprint__c.field-meta.xml
<CustomField>
    <fullName>Comment_Blueprint__c</fullName>
    <label>Comment Blueprint</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>