force-app/main/default/objects/innohub__Activity__c/fields/Comment_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Comment_Delivery__c</fullName>
    <label>Comment Delivery</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>