force-app/main/default/objects/innohub__Activity__c/fields/Comment_Demo__c.field-meta.xml
<CustomField>
    <fullName>Comment_Demo__c</fullName>
    <label>Comment Demo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>