force-app/main/default/objects/innohub__Activity__c/fields/Comment_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Comment_Discovery__c</fullName>
    <label>Comment Discovery</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>