force-app/main/default/objects/innohub__Activity__c/fields/Comment_Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Comment_Use_Cases__c</fullName>
    <label>Comment Use Cases</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>