force-app/main/default/objects/innohub__Activity__c/fields/Comment_V2MOM__c.field-meta.xml
<CustomField>
    <fullName>Comment_V2MOM__c</fullName>
    <label>Comment V2MOM</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>