force-app/main/default/objects/innohub__Activity__c/fields/Comment_Value__c.field-meta.xml
<CustomField>
    <fullName>Comment_Value__c</fullName>
    <label>Comment Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>