force-app/main/default/objects/innohub__Activity__c/fields/Comment_Vision__c.field-meta.xml
<CustomField>
    <fullName>Comment_Vision__c</fullName>
    <label>Comment Vision</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>