force-app/main/default/objects/innohub__Activity__c/fields/Comment_Workshop_POC__c.field-meta.xml
<CustomField>
    <fullName>Comment_Workshop_POC__c</fullName>
    <label>Comment Workshop POC</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>