force-app/main/default/objects/innohub__Activity__c/fields/innohub__BU__c.field-meta.xml
<CustomField>
    <fullName>innohub__BU__c</fullName>
    <label>BU</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MTP</fullName>
            </value>
            <value>
                <fullName>Michelin Solution</fullName>
            </value>
            <value>
                <fullName>PLNA</fullName>
            </value>
            <value>
                <fullName>TCAR</fullName>
            </value>
            <value>
                <fullName>Value 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>