force-app/main/default/objects/innohub__Activity__c/fields/innohub__Step__c.field-meta.xml
<CustomField>
    <fullName>innohub__Step__c</fullName>
    <label>Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workshop SPARK</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Blueprint</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>V2MOM</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Workshop POC</fullName>
            </value>
            <value>
                <fullName>Use Cases</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Preparation EBC</fullName>
            </value>
            <value>
                <fullName>EBC Event</fullName>
            </value>
            <value>
                <fullName>Follow UP EBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>