force-app/main/default/objects/innohub__Activity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPARK</fullName>
            </value>
            <value>
                <fullName>IGNITE</fullName>
            </value>
            <value>
                <fullName>HACKATHON</fullName>
            </value>
            <value>
                <fullName>EBC</fullName>
            </value>
            <value>
                <fullName>DREAMEFORCE2YOU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>